--- a/To-Do-list/style.css
+++ b/To-Do-list/style.css
@@ -54,6 +54,7 @@ form button:hover{
     justify-content:space-between;
     background-color: white;
     margin: 2px 0;
+    transition: all .5s ease-in-out;
     
 }
 .container ul .div-item li {
@@ -75,4 +76,44 @@ form button:hover{
 }
 .container ul .div-item .trashBtn{
     background: #ff6f47;
+}
+.fa-check , .fa-trash{
+    pointer-events: none;
+}
+.compelete{
+    opacity: .5;
+    text-decoration: line-through;
+}
+.fall{
+    transform:translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
+select {
+    appearance: none;
+    box-shadow: none;
+    outline: none;
+    border : none ; 
+    width: 8rem;
+    cursor: pointer;
+    padding: 1rem;
+    color: #0093E9;
+}
+.select{
+    margin-left: 5px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+}
+.select::after{
+    content : "\25BC" ;
+    position: absolute;
+    right : 0 ; 
+    top : -4px ; 
+   
+    z-index: 1 ;
+    color: #0093E9;
+    padding: 1rem;
+    pointer-events: none;
+    
+
 }
